src/App.css
#root {
  margin: 0 auto;
  padding: 2rem;
  overflow: hidden;
  display: flex;
  justify-content: center;
}

.blob {
  /* position: absolute; */
  width: 100%;
  height: 100%;
  /* overflow: hidden; */
  /* background-color: rgba(0, 255, 255, 0.182); */
  /* max-width: 1280px; */

}
  .circle-red {
    position: absolute;
    height: 40%;
    width: 40%;
    border-radius: 50%;
    background: rgba(237, 0, 0, 1);
    filter: blur(100px);
    /* top: -10;
    left: -20; */
    z-index: -99;
    animation: move 7s infinite alternate;
    transition: 1s cubic-bezier(0.07, 0.8, 0.16, 1);
  }

  .circle-blue {
    position: absolute;
    height: 33%;
    width: 33%;
    border-radius: 50%;
    background: rgba(6, 2, 209, 1);
    filter: blur(100px);
    top: -10px;
    right: 20px;
    z-index: -99;
    animation: movee 5s infinite alternate;
    transition: 1s cubic-bezier(0.07, 0.8, 0.16, 1);
  }

@keyframes move {
  from {
    transform: translate(-150px, -50px) rotate(-90deg);
    border-radius: 24% 76% 35% 65% / 27% 36% 64% 73%;
  }

  to {
    transform: translate(50px, 100px) rotate(-10deg);
    border-radius: 76% 24% 33% 67% / 68% 55% 45% 32%;
  }
}
@keyframes movee {
  from {
    transform: translate(50px, 100px) rotate(-10deg);
    border-radius: 76% 24% 33% 67% / 68% 55% 45% 32%;
  }
  to {
    transform: translate(-150px, -50px) rotate(-90deg);
    border-radius: 24% 76% 35% 65% / 27% 36% 64% 73%;
  }
}

